--- a/app/src/main/res/layout/grocery_add_dialog.xml
+++ b/app/src/main/res/layout/grocery_add_dialog.xml
@@ -37,6 +37,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:padding="5dp"
+                app:counterTextColor="@color/black"
+                app:hintTextColor="@color/black"
                 >
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -56,7 +58,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:padding="5dp">
+                android:padding="5dp"
+                app:counterTextColor="@color/black"
+                app:hintTextColor="@color/black">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/idEdtitemquantity"
@@ -75,7 +79,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:padding="5dp">
+                android:padding="5dp"
+                app:counterTextColor="@color/black"
+                app:hintTextColor="@color/black">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/idEdtitemprice"
